# temexe-x-hardware-wallet

./: .gitignore  git_push.sh
include/: crypto_scrypt-nosse.c  sha256.c
include/bitcoin/bitcoin/chain/: block.cpp
include/bitcoin/bitcoin/unicode/: bak_unicode.cpp  unicode.cpp
include/ethash/: keccak.c  keccakf1600.c
include/json_spirit/: json_spirit_reader_template.h
include/libdevcore/: CommonData.h  CommonIO.cpp  FileSystem.cpp  MemoryDB.cpp  SHA3.h
include/libdevcrypto/: AES.cpp  Common.cpp  CryptoPP.cpp  LibSnark.cpp  LibSnark.h
include/libethcore/: BlockHeader.cpp  Common.cpp
include/libsecp256k1/: gen_context.c  group_impl.h  hash_impl.c  hash_impl.h  pub_key.h  secp256k1.c  secp_func_declare.h
include/libsecp256k1/include/: libsecp256k1-config.h  old-secp256k1.h  secp256k1.h  secp256k1_recovery.h
include/libsecp256k1/modules/ecdh/: main_impl.c  main_impl.h
include/libzmq/: libzmq.la  libzmq.pc  platform.hpp  platform.hpp.in
ios/: CMakeLists.txt  cmake.sh
src/nmw_wallet/: Android.mk  Makefile  nmw_wallet_core.cpp  nmw_wallet_core.hpp  test_example.cpp
src/nmw_wallet/jni/: Application.mk
